<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/content_frame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="7.5"
        android:stretchColumns="*"
        android:padding="4dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:padding="4dp">

            <RelativeLayout
                android:id="@+id/home_event_button"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:padding="8dp"
                android:background="@color/blue_overlay">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_evenement_square_title"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_selected_event_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/home_selected_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="italic" />
                    <TextView
                        android:id="@+id/home_selected_event_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:layout_marginBottom="-2dp"
                        android:textSize="15sp" />
                </LinearLayout>

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="4dp">

            <RelativeLayout
                android:id="@+id/home_deposit_button"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/blue_overlay"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_deposit_square_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_your_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="-40dp"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/home_scanner_button"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/blue_overlay"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_scanner_square_title"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_scanner"
                    android:contentDescription="@string/desc_qr_code_icon" />

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="4dp">

            <RelativeLayout
                android:id="@+id/home_find_your_button"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/blue_overlay"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_find_your_square_title"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_find_your"
                    android:contentDescription="@string/desc_find_your_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/home_map_button"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/blue_overlay"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_event_map_square_title"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_map"
                    android:contentDescription="@string/desc_event_map_icon" />

            </RelativeLayout>

        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/home_navigation_drawer"
        android:layout_height="match_parent"
        android:layout_width="240dp"
        android:background="@color/colorAccent"
        android:dividerHeight="0dp"
        android:divider="@android:color/transparent"
        android:choiceMode="singleChoice"
        android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>
