<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henallux.yetee.BalanceActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/balance_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/balance_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <android.support.design.widget.TextInputEditText
                style="@style/DefaultFormFieldStyle"
                android:id="@+id/balance_deposit_amount"
                android:hint="@string/prompt_credit_amount"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/balance_visa_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_visa"
                    android:contentDescription="@string/desc_visa_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/balance_paypal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_paypal"
                    android:contentDescription="@string/desc_paypal_logo" />

            </LinearLayout>

        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            style="@style/DefaultButtonStyle"
            android:id="@+id/balance_confirm_button"
            android:text="@string/action_submit"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:padding="20dp"
        android:id="@+id/balance_billing_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_overlay" />

</RelativeLayout>